# amazon-scraper

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  Dockerfile  LICENSE  Makefile  README.md  apt.txt  conftest.py  debug_nl_page.html  demo.py  docker-compose.yml  env.example  install.sh  packages.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  storage_state.json  streamlit_app.py  test_setup.py
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  db.py  fetch.py  models.py  normalize.py  parser.py  scrape.py  selectors.py  utils.py
debug/: last_page.html
docs/: ROADMAP.md  compte-rendu-2025-10-03.md  recette-fonctionnelle.md
examples/exports/: 2025-10-01T15-27_export.csv
examples/html/: Page test.html
exemple/Page test ressource/: 41bikPo3PAL.js  41gAgISBaAL._RC_310wMINOtEL.js,21EfejafhkL.js,41gAnLBPS4L.js,41Ul1U+eUaL.js,61yxl9kU9FL.js,51V90jYzY9L.js_.js  A1NPLsvmA4L.js  iu3.html  pr.html  sf-1.50.19e5a682.html
pw_profile/: .org.chromium.Chromium.dFVtIB  ChromeFeatureState  Local State
pw_profile/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  Translate Ranker Model  TransportSecurity  Visited Links  Web Data
pw_profile/Default/DawnGraphiteCache/: data_1  index
pw_profile/Default/DawnWebGPUCache/: data_1  index
pw_profile/Default/Extension Rules/: LOG
pw_profile/Default/Extension Scripts/: LOG
pw_profile/Default/Extension State/: LOG
pw_profile/Default/GPUCache/: data_0  data_1  data_2  index
pw_profile/Default/Session Storage/: 000013.ldb  000015.ldb  000017.ldb  000020.ldb  000024.ldb  LOG  MANIFEST-000001
pw_profile/Default/Sessions/: Session_13402505850360414  Session_13402506042171647  Tabs_13402505850888087  Tabs_13402506042701922
pw_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  f_000024  f_000025  f_000026  f_000027  (+29 more)
pw_profile/GraphiteDawnCache/: data_1  index
pw_profile/ShaderCache/: data_1  index
pw_profile/segmentation_platform/: ukm_db  ukm_db-journal
scripts/: examples_asins.txt  init_db.sql  run_integration_tests.py  test_asins.txt
tests/: __init__.py  test_integration.py  test_models.py  test_normalize.py  test_parser.py  test_utils.py
(+3118 files in other folders)
